--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>PEQUENOS ENCANTOS</h1>
-            <ul>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Imagem pequena no canto superior esquerdo -->
+    <img src="file:///C:/Users/ESTHEREDUARDAANDRADE/Downloads/PEQUENOS.png" alt="Imagem Pequena" class="imagem-pequena">
+    
+    <!-- Barra de pesquisa -->
+    <div class="barra-pesquisa">
+        <input type="text" class="input-pesquisa" placeholder="Buscar...">
+        <button class="btn-fechar">X</button>
+    </div>
+    
+    <!-- Barra que se estende de lado a lado -->
+    <div class="barra-horizontal"></div>
+
+   
  
     <main>
         <section id="produtos">
@@ -46,7 +49,6 @@
                     <h3>VESTIDO INFANTIL MENINA</h3>
                     <p>A partir de: R$ 65,90 <br>
                         3x DE R$ 21,95
- 
                     </p>
                     <button>COMPRAR</button>
                 </div>
@@ -71,3 +73,4 @@
     </footer>
 </body>
 </html>
+
